--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -23,7 +23,7 @@ div.clairedivgrey{
     padding: 30px;
     border-radius: 10px;
     border: 2px solid rgb(211, 211, 211);
-    wudth:95px;
+    width:95px;
 
 }
 
