--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -23,13 +23,14 @@ a.clairelink:hover {
     padding: 30px;
     border-radius: 10px;
     border: 2px solid rgb(211, 211, 211);
-    width: 300px;
+    
+    width: fit-content;        
+    max-width: 100%;           
+  
     writing-mode: horizontal-tb !important;
     white-space: normal !important;
     transform: none !important;
-    display: block !important;
   }
-
 h4.clairesmallh4{
     font-size: 18px;
 }
