--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -71,3 +71,9 @@ section#about.resume-section{
     text-align: center;
     width: 20%;
   }
+
+.card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
