--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -77,3 +77,8 @@ section#about.resume-section{
     height: 200px;
     object-fit: cover;
   }
+
+.card a {
+    text-decoration: none;
+    color: inherit;
+  }
