--- a/css/styles.css
+++ b/css/styles.css
@@ -1796,7 +1796,7 @@ progress {
 }
 
 .table-striped > tbody > tr:nth-of-type(odd) > * {
-  --bs-table-accent-bg: var(--bs-table-striped-bg);
+  --bs-table-accent-bg:#E0B6E4
   color: var(--bs-table-striped-color);
 }
 
