--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -72,12 +72,24 @@ section#about.resume-section{
     width: 20%;
   }
 
+.card-row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+.card {
+    width: 23%;
+    text-align: center;
+  }
+  
 .card img {
-    width: 130%;
-    height: 180px;
+    width: 100%;
+    height: 200px;
     object-fit: cover;
   }
-
+  
 .card a {
     text-decoration: none;
     color: inherit;
