--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -81,15 +81,18 @@ section#about.resume-section{
   
 .card {
     width: 23%;
+    border: 1px solid #ccc;
     text-align: center;
+    box-sizing: border-box;
   }
   
 .card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    display: block;
   }
-  
+
 .card a {
     text-decoration: none;
     color: inherit;
