--- a/css/styles.css
+++ b/css/styles.css
@@ -1758,7 +1758,7 @@ progress {
 }
 .table > :not(caption) > * > * {
   padding: 0.5rem 0.5rem;
-  background-color: #301934;
+  background-color: var(--bs-table-bg);
   border-bottom-width: 1px;
   box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
@@ -1796,7 +1796,7 @@ progress {
 }
 
 .table-striped > tbody > tr:nth-of-type(odd) > * {
-  --bs-table-accent-bg:#E0B6E4
+  --bs-table-accent-bg: 
   color: var(--bs-table-striped-color);
 }
 
