--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -39,6 +39,8 @@ h4.clairesmallh4{
 
 section#about.resume-section{
     background-image: url("../assets/img/bc.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .clairecrop{
     height:200px;
@@ -118,7 +120,7 @@ section#about.resume-section{
 }
   
 .art-gallery img {
-    height: 150px;
+    height: 100px;
     margin: 0 10px;
     display: inline-block;
     border-radius: 8px;
