--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -112,6 +112,7 @@ section#about.resume-section{
     width: 100%;
     box-sizing: border-box;
     padding: 10px 0;
+    margin-bottom: 3px;
 }
   
 .scrolling-content {
