--- a/css/styles.css
+++ b/css/styles.css
@@ -1887,7 +1887,7 @@ progress {
 
 .table-danger {
   --bs-table-color: #000;
-  --bs-table-bg: #f8d7da;
+  --bs-table-bg: #d8bce1;
   --bs-table-border-color: #dfc2c4;
   --bs-table-striped-bg: #eccccf;
   --bs-table-striped-color: #000;
