--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -15,7 +15,7 @@ a.clairelink{
 
 a.clairelink:hover {
    background-color: rgb(189, 160, 221);
-   color:azure;
+   color:rgb(255, 255, 255);
 }
 
 .clairedivgrey {
@@ -34,7 +34,7 @@ a.clairelink:hover {
 
 
 h4.clairesmallh4{
-    font-size: 18px;
+    font-size: 20px;
 }
 
 section#about.resume-section{
@@ -89,7 +89,7 @@ section#about.resume-section{
   
 .card img {
     width: 100%;
-    height: 270px;
+    height: 280px;
     object-fit: cover;
     display: block;
 }
@@ -145,3 +145,4 @@ section#about.resume-section{
     font-size: 35px;
     margin-bottom: 2rem;
 }
+
