--- a/css/styles.css
+++ b/css/styles.css
@@ -8128,7 +8128,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color:#b19bc2!important;
+  background-color:#b095c5!important;
 }
 
 .bg-secondary {
